# gpu-magnetic-pendulum

./: Cargo.toml  LICENSE  README.md  gpusim-d956fef5802c04e4.js  gpusim-d956fef5802c04e4_bg.wasm  index.html  sw.js
assets/: manifest.json
src/: app.rs  egui_tools.rs  main.rs  resources.rs  shader.wgsl  sim.rs  twilight.rs
