[package]
name = "gpusim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.32", features = ["wgpu"] }
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.28", features = ["bytemuck"] }
rand = "0.8"

# Set the default for dependencies in Development mode.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
incremental = true
