[package]
name = "gpusim"
authors = ["Rohan Timmaraju"]
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.32", default-features = false, features = ["accesskit", "wayland", "wgpu", "x11", "web_screen_reader"] }
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.28", features = ["bytemuck"] }
rand = "0.9"
getrandom = { version = "*", features = ["wasm_js"] }
log = "0.4.27"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']


# Set the default for dependencies in Development mode.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
incremental = true
